# sc-inspect

./: README.md  pyproject.toml
src/scinspect/: cli.py  data_reader.py  plotting.py  scinspect.tcss  tui.py
