[build-system]
requires = ["setuptools>=61.0"]
build-backedn = "setuptools.build_meta"

[project]
name = "sc-inspect"
version = "0.1.0"
description = "A TUI for exploring single-cell .h5ad files"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name="Nikhil Mark Lakra", email="nikhilmarklakra@gmail.com" }, 
]
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "plotille>=5.0.0",
    "rich>=14.1.0",
    "scanpy>=1.11.3",
    "textual>=5.0.1",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]

[project.scripts]
sc-inspect = "scinspect.cli:main"

[tool.setuptools.package-data]
"scinspect" = ["examples/*.h5ad"]
